# Kortez

./: .gitignore  CMakeLists.txt  Dependencies.cmake  README.md
Kortez/: CMakeLists.txt
Kortez/src/Core/: Application.h
Kortez/src/Kortez/: Application.cpp  Application.h  FileSystem.cpp  FileSystem.h  Layer.h  Window.cpp  Window.h
Kortez/src/Kortez/Renderer/: Buffer.h  Camera.cpp  Camera.h  IndexBuffer.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  RendererAPI.h  Shader.cpp  Shader.h  ShaderDataType.h  Texture.cpp  Texture.h  VertexArray.h  VertexBuffer.h
Kortez/src/Kortez/Renderer/OpenGL/: OpenGLIndexBuffer.cpp  OpenGLIndexBuffer.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture2D.cpp  OpenGLTexture2D.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h  OpenGLVertexBuffer.cpp  OpenGLVertexBuffer.h
Sandbox/: CMakeLists.txt
Sandbox/src/: AppLayer.cpp  AppLayer.h  main.cpp
assets/shaders/: simple.frag  simple.vert
